--- a/linkedinproject/Views/Apliciraj/Index.cshtml
+++ b/linkedinproject/Views/Apliciraj/Index.cshtml
@@ -1,14 +1,6 @@
 ﻿@model IEnumerable<linkedinproject.Models.Apliciraj>
 
-@{
-    ViewData["Title"] = "Index";
-}
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -16,7 +8,10 @@
                 @Html.DisplayNameFor(model => model.Employee)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Oglas)
+              @Html.DisplayName("Employer")
+            </th>
+            <th>
+                @Html.DisplayName("Job Title")
             </th>
             <th></th>
         </tr>
@@ -28,11 +23,13 @@
                 @Html.DisplayFor(modelItem => item.Employee.FirstName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Oglas.Id)
+                @Html.DisplayFor(modelItem => item.Oglas.Employer.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                @Html.DisplayFor(modelItem => item.Oglas.JobTitle)
+            </td>
+            <td>
+              
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
