--- a/linkedinproject/Views/Employee/Interests.cshtml
+++ b/linkedinproject/Views/Employee/Interests.cshtml
@@ -14,7 +14,7 @@
     {
         <div class="fontface" style="text-align:center; position:relative; border:solid 1px; font-weight:bold;">
 
-            <a asp-area="" asp-controller="Employer" asp-action="EmployeeSeeProfile" asp-route-id="@item.EmployerId">
+            <a asp-area="" asp-controller="Employee" asp-action="EmployeeSeeProfile" asp-route-id="@item.EmployerId">
                 <img src="~/images/@item.Employer.ProfilePicture"
                      class="rounded-circle"
                      height="100" width="100" style="margin-top:0.5%;"
