--- a/linkedinproject/Views/Employee/AddSkills.cshtml
+++ b/linkedinproject/Views/Employee/AddSkills.cshtml
@@ -1,101 +1,103 @@
 ﻿@model linkedinproject.Models.Employee
 
-<div class="row" style="text-align:center; position:relative; margin-top:15%; left:30%;">
-    <div class="col-md-4">
-        <form asp-action="AddSkills">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label" hidden></label>
-                <input asp-for="FirstName" class="form-control" hidden />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label" hidden></label>
-                <input asp-for="LastName" class="form-control" hidden />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Age" class="control-label" hidden></label>
-                <input asp-for="Age" class="form-control" hidden />
-                <span asp-validation-for="Age" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProfilePicutre" class="control-label" hidden></label>
-                <input asp-for="ProfilePicutre" class="form-control" hidden />
-                <span asp-validation-for="ProfilePicutre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CoverPhoto" class="control-label" hidden></label>
-                <input asp-for="CoverPhoto" class="form-control" hidden />
-                <span asp-validation-for="CoverPhoto" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CV" class="control-label" hidden></label>
-                <input asp-for="CV" class="form-control" hidden />
-                <span asp-validation-for="CV" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CoverLetter" class="control-label" hidden></label>
-                <input asp-for="CoverLetter" class="form-control" hidden />
-                <span asp-validation-for="CoverLetter" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="GitHubLink" class="control-label" hidden></label>
-                <input asp-for="GitHubLink" class="form-control" hidden />
-                <span asp-validation-for="GitHubLink" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CurrentPosition" class="control-label" hidden></label>
-                <input asp-for="CurrentPosition" class="form-control" hidden />
-                <span asp-validation-for="CurrentPosition" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="WantedPosition" class="control-label" hidden></label>
-                <input asp-for="WantedPosition" class="form-control" hidden />
-                <span asp-validation-for="WantedPosition" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label" hidden></label>
-                <input asp-for="Description" class="form-control"  hidden/>
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Location" class="control-label" hidden></label>
-                <input asp-for="Location" class="form-control" hidden />
-                <span asp-validation-for="Location" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label" hidden></label>
-                <input asp-for="PhoneNumber" class="form-control" hidden />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Mail" class="control-label" hidden></label>
-                <input asp-for="Mail" class="form-control" hidden />
-                <span asp-validation-for="Mail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label" hidden></label>
-                <input asp-for="Password" class="form-control" hidden />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group" style=" font-size:20px;">
-                <div style="font-size:25px; position:relative; left:25%;"><strong>Your Skills:</strong></div>
-                <label asp-for="Skills" class="control-label" hidden></label>
-                <textarea type="text"  rows="5" asp-for="Skills" class="form-group" style="height:450px; width:500px; "></textarea>
-                <span asp-validation-for="Skills" class="text-danger"></span>
-            </div>
-            <div  class="form-group" style="left:25%; position:relative;">
-                <input type="submit" value="Save Changes" class="btn btn-primary" />
-            </div>
-        </form>
+    <div class="row" style="position:relative; left:20%; margin-top:10%; width:225%; text-align:center; font-size:20px;">
+        <div class="col-md-4">
+            <form asp-action="AddSkills">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Id" />
+                <div class="form-group">
+                    <label asp-for="FirstName" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="FirstName" class="form-control" hidden />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LastName" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="LastName" class="form-control" hidden />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Age" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="Age" class="form-control" hidden />
+                    <span asp-validation-for="Age" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ProfilePicutre" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="ProfilePicutre" class="form-control" hidden />
+                    <span asp-validation-for="ProfilePicutre" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CoverPhoto" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="CoverPhoto" class="form-control" hidden />
+                    <span asp-validation-for="CoverPhoto" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CV" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="CV" class="form-control" hidden />
+                    <span asp-validation-for="CV" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CoverLetter" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="CoverLetter" class="form-control" hidden />
+                    <span asp-validation-for="CoverLetter" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="GitHubLink" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="GitHubLink" class="form-control" hidden />
+                    <span asp-validation-for="GitHubLink" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CurrentPosition" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="CurrentPosition" class="form-control" hidden />
+                    <span asp-validation-for="CurrentPosition" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="WantedPosition" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="WantedPosition" class="form-control" hidden />
+                    <span asp-validation-for="WantedPosition" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="Description" class="form-control" hidden />
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Location" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="Location" class="form-control" hidden />
+                    <span asp-validation-for="Location" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="PhoneNumber" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="PhoneNumber" class="form-control" hidden />
+                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Mail" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="Mail" class="form-control" hidden />
+                    <span asp-validation-for="Mail" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password" class="control-label" hidden></label>
+                    <input type="hidden" asp-for="Password" class="form-control" hidden />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-group" style=" font-size:20px;">
+                    <div style="font-size:25px; position:relative;"><strong>Your Skills:</strong></div>
+                    <label asp-for="Skills" class="control-label" hidden></label>
+                    <textarea type="text" rows="5" asp-for="Skills" class="form-group" style="height:450px; width:500px; "></textarea>
+                    <span asp-validation-for="Skills" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save Changes" class="btn btn-primary" />
+                </div>
+                <div class="form-group">
+                    <a asp-action="EmployeeHomePage" asp-route-id="@Model.Id">Back to profile</a>
+                </div>
+            </form>
+        </div>
+        
     </div>
-</div>
 
-<div  class="form-group col-md-4 row" style="position:relative; left:49%;">
-    <a asp-action="EmployeeHomePage" asp-route-id="@Model.Id">Back to profile</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
