--- a/linkedinproject/Views/Employee/EditContact.cshtml
+++ b/linkedinproject/Views/Employee/EditContact.cshtml
@@ -4,29 +4,29 @@
         <form asp-action="EditContact" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group" >
-                <label asp-for="FirstName" class="control-label" hidden ></label>
-                <input asp-for="FirstName" class="form-control" hidden />
+            <div class="form-group">
+                <label asp-for="FirstName" class="control-label" hidden></label>
+                <input type="hidden" asp-for="FirstName" class="form-control" hidden />
                 <span asp-validation-for="FirstName" class="text-danger" hidden></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastName" class="control-label" hidden></label>
-                <input asp-for="LastName" class="form-control" hidden />
+                <input type="hidden" asp-for="LastName" class="form-control" hidden />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Age" class="control-label" hidden></label>
-                <input asp-for="Age" class="form-control" hidden />
+                <input type="hidden" asp-for="Age" class="form-control" hidden />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ProfileImage" class="control-label" hidden></label>
-                <input asp-for="ProfileImage" class="form-control" hidden />
+                <input type="hidden" asp-for="ProfileImage" class="form-control" hidden />
                 <span asp-validation-for="ProfileImage" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CoverImage" class="control-label" hidden></label>
-                <input asp-for="CoverImage" class="form-control" hidden />
+                <input type="hidden" asp-for="CoverImage" class="form-control" hidden />
                 <span asp-validation-for="CoverImage" class="text-danger"></span>
             </div>
 
@@ -34,16 +34,14 @@
             <div class="form-group">
                 <label asp-for="CVFile" class="control-label"><strong>CV:</strong></label>
                 <div class="custom-file">
-                    <input asp-for="CVFile" class="custom-file-input" id="customFile">
-                    <label class="custom-file-label" for="customFile">Choose file</label>
+                    <input asp-for="CVFile" class="form-control" id="customFile">
                 </div>
                 <span asp-validation-for="CVFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CoverLetterFile" class="control-label"><strong>Cover Letter:</strong></label>
                 <div class="custom-file">
-                    <input asp-for="CoverLetterFile" class="custom-file-input" id="customFile">
-                    <label class="custom-file-label" for="customFile">Choose file</label>
+                    <input asp-for="CoverLetterFile" class="form-control" id="customFile">
                 </div>
                 <span asp-validation-for="CoverLetterFile" class="text-danger"></span>
             </div>
@@ -51,18 +49,18 @@
 
 
             <div class="form-group">
-                <label asp-for="GitHubLink" class="control-label"><strong>Link form GitHUb</strong></label>
+                <label asp-for="GitHubLink" class="control-label"><strong>Link form GitHub</strong></label>
                 <input asp-for="GitHubLink" class="form-control" />
                 <span asp-validation-for="GitHubLink" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CurrentPosition" class="control-label" hidden></label>
-                <input asp-for="CurrentPosition" class="form-control" hidden />
+                <input type="hidden" asp-for="CurrentPosition" class="form-control" hidden />
                 <span asp-validation-for="CurrentPosition" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="WantedPosition" class="control-label" hidden></label>
-                <input asp-for="WantedPosition" class="form-control" hidden />
+                <input type="hidden" asp-for="WantedPosition" class="form-control" hidden />
                 <span asp-validation-for="WantedPosition" class="text-danger"></span>
             </div>
 
@@ -88,8 +86,8 @@
                 <span asp-validation-for="Mail" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password" class="control-label" hidden></label>
-                <input asp-for="Password" class="form-control" hidden />
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -100,13 +98,14 @@
             <div class="form-group">
                 <input type="submit" value="Save Changes" class="btn btn-primary" />
             </div>
+            <div class="form-group">
+                <a asp-action="EmployeeHomePage" asp-route-id="@Model.Id">Back to profile</a>
+            </div>
         </form>
     </div>
 </div>
 
-<div class="row" style="position:relative; left:21.5%;">
-    <a asp-action="EmployeeHomePage" asp-route-id="@Model.Id">Back to profile</a>
-</div>
+
 @section scripts{
     <script type="text/javascript">
 
