--- a/linkedinproject/Views/Employee/EditProfile.cshtml
+++ b/linkedinproject/Views/Employee/EditProfile.cshtml
@@ -22,15 +22,13 @@
 
             <label asp-for="ProfileImage" class="control-label"><strong>Profile Picture</strong></label>
             <div class="custom-file">
-                <input asp-for="ProfileImage" class="custom-file-input" id="customFile">
-                <label class="custom-file-label" for="customFile" >Choose file</label>
+                <input asp-for="ProfileImage" class="form-control" id="customFile">
                 <span asp-validation-for="ProfileImage" class="text-info" style="background-color:lightblue;"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CoverImage" class="control-label"><strong>Cover Image</strong></label> 
+                <label asp-for="CoverImage" class="control-label"><strong>Cover Image</strong></label>
                 <div class="custom-file">
-                    <input asp-for="CoverImage" class="custom-file-input" id="customFile">
-                    <label class="custom-file-label" for="customFile">Choose file</label>
+                    <input asp-for="CoverImage" class="form-control" id="customFile">
                 </div>
                 <span asp-validation-for="CoverImage" class="text-danger"></span>
             </div>
@@ -52,12 +50,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="CoverLetterFile" class="control-label" hidden></label>
-                <input asp-for="CoverLetterFile" class="form-control" hidden  type="hidden"/>
+                <input asp-for="CoverLetterFile" class="form-control" hidden type="hidden" />
                 <span asp-validation-for="CoverLetterFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="GitHubLink" class="control-label" hidden></label>
-                <input asp-for="GitHubLink" class="form-control" hidden  type="hidden"/>
+                <input asp-for="GitHubLink" class="form-control" hidden type="hidden" />
                 <span asp-validation-for="GitHubLink" class="text-danger"></span>
             </div>
 
@@ -79,12 +77,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Mail" class="control-label" hidden></label>
-                <input asp-for="Mail" class="form-control" hidden  type="hidden"/>
+                <input asp-for="Mail" class="form-control" hidden type="hidden" />
                 <span asp-validation-for="Mail" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label" hidden></label>
-                <input asp-for="Password" class="form-control" hidden  type="hidden"/>
+                <input asp-for="Password" class="form-control" hidden type="hidden" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -92,16 +90,17 @@
                 <textarea type="hidden" rows="5" asp-for="Skills" class="form-group" style="height:200px; width:250px;" hidden></textarea>
                 <span asp-validation-for="Skills" class="text-danger"></span>
             </div>
-            <div class="form-group" style="position:relative; left:-42%;">
+            <div class="form-group">
                 <input type="submit" value="Save Changes" class="btn btn-primary" />
             </div>
+            <div class="row" >
+                <a asp-action="EmployeeHomePage" asp-route-id="@Model.Id">Back to profile</a>
+            </div>
+
         </form>
     </div>
 </div>
 
-<div class="row" style="position:relative; left:21.5%;">
-    <a asp-action="EmployeeHomePage" asp-route-id="@Model.Id">Back to profile</a>
-</div>
 
 @section scripts{
     <script type="text/javascript">
