--- a/linkedinproject/Views/Employees/Index.cshtml
+++ b/linkedinproject/Views/Employees/Index.cshtml
@@ -1,51 +1,30 @@
 ﻿@model IEnumerable<linkedinproject.Models.Employee>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                @Html.DisplayName("First Name")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                @Html.DisplayName("Last Name")
+            </th>
+
+            <th>
+                @Html.DisplayName("Profile Picture")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Age)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProfilePicutre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CoverPhoto)
+                @Html.DisplayName("Cover Picture")
             </th>
             
-            <th>
-                @Html.DisplayNameFor(model => model.CurrentPosition)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.WantedPosition)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Location)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </th>
+           
             <th>
                 @Html.DisplayNameFor(model => model.Mail)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Password)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Skills)
-            </th>
+
 
             <th></th>
         </tr>
@@ -60,9 +39,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.LastName)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Age)
-                </td>
+
                 <td>
                     <img src="~/images/@item.ProfilePicutre"
                          class="rounded-circle"
@@ -76,34 +53,16 @@
                          asp-append-version="true" />
                 </td>
                 
-                <td>
-                    @Html.DisplayFor(modelItem => item.CurrentPosition)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.WantedPosition)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Location)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PhoneNumber)
-                </td>
+              
                 <td>
                     @Html.DisplayFor(modelItem => item.Mail)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Password)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Skills)
-                </td>
 
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                   
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
                     <a asp-area="" asp-controller="Admin" asp-action="EmployeeProfile" asp-route-employeeid="@item.Id">Profile</a>
                 </td>
