--- a/linkedinproject/Views/Employer/EditContact.cshtml
+++ b/linkedinproject/Views/Employer/EditContact.cshtml
@@ -1,27 +1,24 @@
 ﻿@model linkedinproject.Models.Employer
 
-<h1>Edit</h1>
 
-<h4>Employer</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-10" style="position:relative; margin-top:10%;">
         <form asp-action="EditContact">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label" hidden></label>
-                <input asp-for="Name" class="form-control"  hidden/>
+                <input type="hidden" asp-for="Name" class="form-control"  hidden/>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ProfilePicture" class="control-label"hidden></label>
-                <input asp-for="ProfilePicture" class="form-control"hidden />
+                <input type="hidden" asp-for="ProfilePicture" class="form-control"hidden />
                 <span asp-validation-for="ProfilePicture" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"hidden></label>
-                <input asp-for="Description" class="form-control" hidden/>
+                <input type="hidden" asp-for="Description" class="form-control" hidden/>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -45,7 +42,7 @@
                 <span asp-validation-for="Mail" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password" class="control-label" hidden></label>
+                <label asp-for="Password" class="control-label">Password</label>
                 <input asp-for="Password" class="form-control"  hidden/>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
