--- a/linkedinproject/Views/Employer/EditProfile.cshtml
+++ b/linkedinproject/Views/Employer/EditProfile.cshtml
@@ -11,41 +11,41 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProfileImage" class="control-label"></label>
-                <div class="custom-file">
-                    <input asp-for="ProfileImage" class="custom-file-input" id="customFile">
-                    <label class="custom-file-label" for="customFile">Choose file</label>
+                <label asp-for="ProfileImage" class="control-label">Profile Image</label>
+                <div class="form-group">
+                    <input asp-for="ProfileImage" class="form-control" id="customFile">
+                  <!--  <label class="custom-file-label" for="customFile">Choose file</label> -->
                 </div>
                 <span asp-validation-for="ProfileImage" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group ">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <input asp-for="Description" class="form-control" height="200" width="200" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CEOName" class="control-label" hidden></label>
-                <input asp-for="CEOName" class="form-control" hidden />
+                <input type="hidden" asp-for="CEOName" class="form-control" hidden />
                 <span asp-validation-for="CEOName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Location" class="control-label" hidden></label>
-                <input asp-for="Location" class="form-control" hidden />
+                <input type="hidden" asp-for="Location" class="form-control" hidden />
                 <span asp-validation-for="Location" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PhoneNumber" class="control-label" hidden></label>
-                <input asp-for="PhoneNumber" class="form-control" hidden />
+                <input type="hidden" asp-for="PhoneNumber" class="form-control" hidden />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Mail" class="control-label" hidden></label>
-                <input asp-for="Mail" class="form-control" hidden />
+                <input type="hidden" asp-for="Mail" class="form-control" hidden />
                 <span asp-validation-for="Mail" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label" hidden></label>
-                <input asp-for="Password" class="form-control" hidden />
+                <input type="hidden" asp-for="Password" class="form-control" hidden />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
