--- a/linkedinproject/Views/Oglas/Delete.cshtml
+++ b/linkedinproject/Views/Oglas/Delete.cshtml
@@ -1,12 +1,8 @@
 ﻿@model linkedinproject.Models.Oglas
 
-
-<h1>Delete</h1>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Oglas</h4>
-    <hr />
+    <br />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.JobTitle)
@@ -20,23 +16,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Employee.FirstName)
-        </dd class>
+        
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Employer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Employer.Id)
+            @Html.DisplayFor(model => model.Employer.Name)
         </dd class>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a href='javascript:history.go(-1)'>Back to profile</a>
     </form>
 </div>
