--- a/linkedinproject/Views/Oglas/Index.cshtml
+++ b/linkedinproject/Views/Oglas/Index.cshtml
@@ -1,13 +1,9 @@
 ﻿@model IEnumerable<linkedinproject.Models.Oglas>
 
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
+<table class="table" style="position:relative; margin-top:5%;">
+    <thead style="font-size:20px;">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.JobTitle)
@@ -34,8 +30,7 @@
                 @Html.DisplayFor(modelItem => item.Employer.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+              
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
