--- a/linkedinproject/Views/Oglas/MakeOglas.cshtml
+++ b/linkedinproject/Views/Oglas/MakeOglas.cshtml
@@ -1,16 +1,13 @@
 ﻿@model linkedinproject.Models.Oglas
 
 
-<h1>Create</h1>
 
-<h4>Oglas</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
+    <div  class="col-md-10" style="position:relative; margin-top:20%;">
         <form asp-action="MakeOglas">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="JobTitle" class="control-label"></label>
+                <label asp-for="JobTitle" class="control-label">Job Title</label>
                 <input asp-for="JobTitle" class="form-control" />
                 <span asp-validation-for="JobTitle" class="text-danger"></span>
             </div>
@@ -21,7 +18,7 @@
             </div>
             
             <div class="form-group">
-                <label asp-for="EmployerId" class="control-label"></label>
+                <label asp-for="EmployerId" class="control-label">Employer</label>
                 <select asp-for="EmployerId" class="form-control" asp-items="ViewBag.EmployerId"></select>
             </div>
             <div class="form-group">
@@ -32,7 +29,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a href='javascript:history.go(-1)'>Back to Profile</a>
 </div>
 
 @section Scripts {
