--- a/linkedinproject/Views/Employee/EditCoverPicture.cshtml
+++ b/linkedinproject/Views/Employee/EditCoverPicture.cshtml
@@ -1,56 +1,55 @@
-﻿@model linkedinproject.Models.Employee
+﻿@model linkedinproject.ViewModels.EVMCoverPicture
 <div class="row" style="position:relative; left:20%; margin-top:10%; width:225%; text-align:center; font-size:20px;">
     <div class="col-md-4">
-        <form asp-action="EditProfile" method="post" enctype="multipart/form-data">
+        <form asp-action="EditCoverPicture" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"><strong>First Name</strong></label>
-                <input asp-for="FirstName" class="form-control" />
+                <label asp-for="FirstName" class="control-label" hidden></label>
+                <input asp-for="FirstName" class="form-control" hidden type="hidden" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"><strong>Last Name</strong></label>
-                <input asp-for="LastName" class="form-control" />
+                <label asp-for="LastName" class="control-label" hidden><strong>Last Name</strong></label>
+                <input asp-for="LastName" class="form-control" hidden type="hidden" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Age" class="control-label"><strong>Age</strong></label>
-                <input asp-for="Age" class="form-control" />
+                <label asp-for="Age" class="control-label" hidden><strong>Age</strong></label>
+                <input asp-for="Age" class="form-control" hidden type="hidden" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="ProfilePicutre" class="control-label" hidden></label>
-                <input asp-for="ProfilePicutre" class="form-control" hidden type="hidden" />
-                <span asp-validation-for="ProfilePicutre" class="text-danger"></span>
+            <label asp-for="CoverImage" class="control-label"><strong>Cover Image</strong></label>
+            <div class="custom-file">
+                <input asp-for="CoverImage" class="form-control" id="customFile">
+                <span asp-validation-for="CoverImage" class="text-info" style="background-color:lightblue;"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CoverPhoto" class="control-label" hidden></label>
-                <input asp-for="CoverPhoto" class="form-control" hidden type="hidden" />
-                <span asp-validation-for="CoverPhoto" class="text-danger"></span>
+                <label asp-for="ProfileImage" class="control-label" hidden></label>
+                <input asp-for="ProfileImage" class="form-control" hidden type="hidden" />
+                <span asp-validation-for="ProfileImage" class="text-danger"></span>
             </div>
-
             <div class="form-group">
-                <label asp-for="CurrentPosition" class="control-label"><strong>Current Position</strong></label>
-                <input asp-for="CurrentPosition" class="form-control" />
+                <label asp-for="CurrentPosition" class="control-label" hidden><strong>Current Position</strong></label>
+                <input asp-for="CurrentPosition" class="form-control" hidden type="hidden" />
                 <span asp-validation-for="CurrentPosition" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="WantedPosition" class="control-label"><strong>Wanted Position</strong></label>
-                <input asp-for="WantedPosition" class="form-control" />
+                <label asp-for="WantedPosition" class="control-label" hidden><strong>Wanted Position</strong></label>
+                <input asp-for="WantedPosition" class="form-control" hidden type="hidden" />
                 <span asp-validation-for="WantedPosition" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="CV" class="control-label" hidden></label>
-                <input asp-for="CV" class="form-control" hidden type="hidden" />
-                <span asp-validation-for="CV" class="text-danger"></span>
+                <label asp-for="CVFile" class="control-label" hidden></label>
+                <input asp-for="CVFile" class="form-control" hidden type="hidden" />
+                <span asp-validation-for="CVFile" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CoverLetter" class="control-label" hidden></label>
-                <input asp-for="CoverLetter" class="form-control" hidden type="hidden" />
-                <span asp-validation-for="CoverLetter" class="text-danger"></span>
+                <label asp-for="CoverLetterFile" class="control-label" hidden></label>
+                <input asp-for="CoverLetterFile" class="form-control" hidden type="hidden" />
+                <span asp-validation-for="CoverLetterFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="GitHubLink" class="control-label" hidden></label>
