--- a/linkedinproject/Views/Employee/EmployeeHomePage.cshtml
+++ b/linkedinproject/Views/Employee/EmployeeHomePage.cshtml
@@ -15,10 +15,14 @@
              style="width:100%; height:500px; position:relative; z-index:-1;"
              asp-append-version="true" />
         <img src="~/images/@Model.ProfilePicutre"
-             style="width:200px; height:200px; border-radius:50%; position:absolute; z-index:1; left:42%; top:46%; "
+             style="width:200px; height:200px; border-radius:50%; position:absolute; z-index:1; left:42%; top:58%; "
              asp-append-version="true" />
+    </div>
+    <div style="z-index:5; position:relative; text-align:center;"><a asp-controller="Employee" asp-action="EditCoverPicture" asp-route-id="@Model.Id">Change Cover Image</a></div>
+    <div style="z-index:5; position:relative; text-align:center;"><a asp-controller="Employee" asp-action="EditProfilePicture" asp-route-id="@Model.Id">Change Profile Picture</a></div>
 
-        <br />
+    <br />
+    <div style="background-color:aliceblue; position:relative; z-index:-5;">
         <div style="position:relative; text-align:center;">
             <div style="font-size:35px"><strong>@Html.DisplayFor(model => model.FullName)</strong></div>
             <div>Age: @Html.DisplayFor(model => model.Age)</div>
@@ -31,15 +35,23 @@
 
     <div style="background-color:aliceblue; position:relative; text-align:center;">
         <strong style="font-size:25px;">Contact</strong>
-        <div>CV: <a href="~/files/@Html.DisplayFor( model => model.CV)">@Html.DisplayFor(model => model.CV)</a></div>
-        <div>Cover Letter: <a href="~/files/@Html.DisplayFor(model => model.CoverLetter)">@Html.DisplayFor(model => model.CoverLetter)</a></div>
+        <div>
+            CV: <a href="~/files/@Html.DisplayFor( model => model.CV)">@Html.DisplayFor(model => model.CV)</a>
+            <a asp-area="" asp-controller="Employee" asp-action="EditCV" asp-route-id="@Model.Id"
+               style="position:relative; z-index:5; float:right;">Edit CV</a>
+        </div>
+        <div>
+            Cover Letter: <a href="~/files/@Html.DisplayFor(model => model.CoverLetter)">@Html.DisplayFor(model => model.CoverLetter)</a>
+            <a asp-area="" asp-controller="Employee" asp-action="EditCoverL" asp-route-id="@Model.Id"
+               style="position:relative; z-index:5; float:right;">Edit Cover Letter</a>
+        </div>
         <div>GitHub: <a href="@Html.DisplayFor(model => model.GitHubLink)">@Html.DisplayFor(model => model.GitHubLink)</a></div>
         <div>Location: @Html.DisplayFor(model => model.Location)</div>
         <div>Phone Number: @Html.DisplayFor(model => model.PhoneNumber)</div>
         <div>Mail: @Html.DisplayFor(model => model.Mail)</div>
     </div>
     <a asp-area="" asp-controller="Employee" asp-action="EditContact" asp-route-id="@Model.Id"
-       style="position:relative; z-index:5; left:49%;">Edit</a>
+       style="position:relative; z-index:5; left:47%;">Edit Contact</a>
 
     <div style="background-color:aliceblue; position:relative; text-align:center;">
         <strong style="font-size:25px;">Description</strong> <br />
@@ -67,13 +79,32 @@
                  height="70" width="70"
                  asp-append-version="true" />
             <a asp-area="" asp-controller="Employee" asp-action="EmployeeSeeProfile" asp-route-id="@item.Employer.Id" style="font-size:20px;">
-        @Html.DisplayFor(modelItem => item.Employer.Name) </a>
+                @Html.DisplayFor(modelItem => item.Employer.Name)
+            </a>
             <a asp-area="" asp-controller="Interest" asp-action="Delete" asp-route-id="@item.Id"><div style="position:relative; float:right;">Not interested</div></a>
             <br />
         }
         <br />
         <a asp-area="" asp-controller="Interest" asp-action="MakeInterest" asp-route-id="@Model.Id"
            style=" position:relative; text-align:center; left:46%;">Add Interests</a>
+    </div>
+    <br />
+    <h1 style="text-align:center;">Your applications:</h1>
+    <div style="background-color:aliceblue;">
+        @foreach (var item in Model.Aplikacii)
+        {
+
+            <div class="fontface" style="text-align:center; position:relative; border:solid 1px; font-weight:bold;">
+                <a asp-area="" asp-controller="Employee" asp-action="EmployeeSeeProfile" asp-route-id="@item.Oglas.EmployerId">
+                    <strong style="font-size:40px;"> @Html.DisplayFor(modelItem => item.Oglas.Employer.Name)</strong>
+                </a>
+                <hr />
+                <div style="font-weight:bold; font-size:30px;">@Html.DisplayFor(modelItem => item.Oglas.JobTitle)</div>
+                <div>@Html.DisplayFor(modelItem => item.Oglas.Description)</div>
+            </div>
+
+        }
+
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
